refactor: keyword.trim().isEmpty()를 isBlank()를 사용하도록 수정
#324